[project]
name = "mylmoe"
description = "myl7's blog"
authors = [{ name = "Yulong Ming", email = "myl@myl.moe" }]
license = "Apache-2.0 AND CC-BY-4.0"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.13"
dependencies = [
    "mkdocs-material>=9.6.14",
    "mkdocs-rss-plugin>=1.17.2",
]
